--- a/web/index.html
+++ b/web/index.html
@@ -23,10 +23,10 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="ggsipu_notice">
+  <meta name="apple-mobile-web-app-title" content="ip_notices">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>ggsipu_notice</title>
+  <title>ip_notices</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
